Fix for toggle z-index

--- a/owl/styles.css
+++ b/owl/styles.css
@@ -217,10 +217,8 @@ li.notion-list-item:before {
   gap: 40px !important;
   column-count: 3;
   display: block !important;
-  /* flex-flow: row wrap !important; */
   width: 100%;
   height: auto;
-  /* max-height: 900px !important; */
 }
 
 .notion-collection-card,
@@ -235,7 +233,6 @@ li.notion-list-item:before {
   height: 100% !important;
   margin-bottom: 40px !important;
   display: inline-block !important;
-  /* max-width: 30% !important; */
   transition: opacity 0.2s ease-in-out !important;
 }
 
@@ -343,6 +340,7 @@ label {
   background-position: calc(100% - 5px) 5px;
   background-size: 1rem;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 label:after {
@@ -364,6 +362,7 @@ input:checked + label {
   background-position: 5px 5px;
   background-size: 1rem;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 input:checked + label:after {
